:bug: Fix: fix image path, about page"

--- a/user/config/userTheme.scss
+++ b/user/config/userTheme.scss
@@ -6,3 +6,13 @@
   --qwer-bg-color: #e1e3dd;
   --qwer-text-color: black;
 }
+
+
+.prose {
+  li>p{
+    margin: 0;
+  }
+  li>ul {
+    margin: 0;
+  }
+}
