feat: migrate post

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -328,6 +328,7 @@ function initCustomScrollbar() {
 
 function showBanner() {
 	const banner = document.getElementById('banner')
+	console.log(banner)
 	if (!banner) {
 		console.error('Failed to find the banner element')
 		return
