--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -26,9 +26,10 @@ interface Props {
   description?: string
   lang?: string
   setOGTypeArticle?: boolean
+	slug: string | undefined
 }
 
-let { title, banner, description, lang, setOGTypeArticle } = Astro.props
+let { title, banner, description, lang, setOGTypeArticle,slug } = Astro.props
 
 // apply a class to the body element to decide the height of the banner, only used for initial page load
 // Swup can update the body for each page visit, but it's after the page transition, causing a delay for banner height change
@@ -70,6 +71,13 @@ const bannerOffsetByPosition = {
 }
 const bannerOffset =
   bannerOffsetByPosition[siteConfig.banner.position || 'center']
+
+
+	let ogImageSrc;
+// if siteOGImage is enabled, use the siteOGImage as the og:image
+ogImageSrc = siteConfig.siteOGImage.enable ? (Astro.site ? `${Astro.site.origin}${siteConfig.siteOGImage.src}` : siteConfig.siteOGImage.src) : false;
+// if postOGImageDynamic is enabled, use the generated one as the og:image
+if (siteConfig.postOGImageDynamic && slug) ogImageSrc = Astro.site ? `${Astro.site.origin}/open-graph/${slug}.png` : false;
 ---
 
 <!DOCTYPE html>
@@ -98,6 +106,14 @@ const bannerOffset =
 		<meta property="twitter:url" content={Astro.url}>
 		<meta name="twitter:title" content={pageTitle}>
 		<meta name="twitter:description" content={description || pageTitle}>
+
+		{ogImageSrc && typeof ogImageSrc === 'string' && 
+			<>
+				<meta property="og:image" content={ogImageSrc}/>
+				<meta property="twitter:image" content={ogImageSrc}/>
+			</>
+		}
+
 
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
